RESOLVED FIXED73368
toStringCallback and valueOfCallback do not check the entire prototype chain for convertToType callback
https://bugs.webkit.org/show_bug.cgi?id=73368
Summary toStringCallback and valueOfCallback do not check the entire prototype chain ...
Mark Hahnenberg
Reported 2011-11-29 15:05:27 PST
We need to check the entire chain, since the first JSClassRef may not be the one with the convertToType callback.
Attachments
Patch (3.67 KB, patch)
2011-11-29 15:07 PST, Mark Hahnenberg
darin: review+
Mark Hahnenberg
Comment 1 2011-11-29 15:07:46 PST
Mark Hahnenberg
Comment 2 2011-11-29 16:14:01 PST
Darin Adler
Comment 3 2011-11-29 17:42:13 PST
Comment on attachment 117054 [details] Patch WebKit coding style requires more braces around those if statement bodies. We only omit them when the body is 1-line, not 1-statement-over-multiple-lines.
Mark Hahnenberg
Comment 4 2011-11-30 11:43:07 PST
Note You need to log in before you can comment on or make changes to this bug.