toStringCallback and valueOfCallback do not check the entire prototype chain for convertToType callback https://bugs.webkit.org/show_bug.cgi?id=73368

Reviewed by Darin Adler.

We need to search the entire prototype chain for the convertToType callback, rather than just calling whatever
happens to be in the first class of the chain, which potentially could be null.

<rdar://problem/10493218>

* API/JSCallbackFunction.cpp:
(JSC::JSCallbackFunction::toStringCallback):
(JSC::JSCallbackFunction::valueOfCallback):


Canonical link: https://commits.webkit.org/90020@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101539 268f45cc-cd09-0410-ab3c-d52691b4dbfc